
	As long as you have enough puntuation characters for special operations,
	you can parse in real time. Actually if you drop the longest match and only
	use first/shortest match, you simplify things and you can drop the +
	operator since you can do "a+" as "aa*"

	*** To be refined. (ARSE = anthony's reduced search expressions)

--1.71.5--

   +	Add dnsListQueryMail for querying EMAIL BL.

--1.71.4--

   *    Do NOT upgrade SQLite to 3.6.14; it has broken configure script.

   !	uriParse2: added check to distinguish between schemes that can
	have an empty value (about:) and those that require a value
	(http://blah/). Requested by Alex Broens.

   !	spanIP: fixed to take into account IPv6 address within square
   	brackets, eg. [2001:0DB8::1234]

   !	uri.txt.out: updated to account for the uriParse2 and spanIP
   	fixes.

   !	dnsListQueryNs0: was recursing if both NS and an SOA was returned
	with the initial NS lookup. This would incorrectly cause a 2nd
	lookup on the SOA domain.

--1.71.3--

  !!	mime.c/h: Fixes following the complete overhaul to maintain
	backwards compatibility behaviour of mime_decoded_octet hook.
	This was being done just before flushing the decode buffer, but
	that caused problems in how the uri, milter-link, and smtpf
	detected potential URI; they occasionally missed URI when there
	was more than one in the decode buffer. Fixed several decode
	newline issues. Added mime-eicar-test.sh regression test that
	checks both CRLF and LF newlines.

   !	mime-eicar-*.eml: changed to use GTUBE test file which won't
   	trigger AV scanners when emailing/downloading libsnert.

--1.71.2--

   !	uri.c: fixed uri CLI when parsing a URL that uses & delimiters
   	but no query string delimiter, eg.

   	http://dect.myspace.com/event.ng/Type=click&Redirect=http://pillenhaus.ch

   !	dnsListIsNameListed: fixed test to limit matches to 127.0.0.0/8
	or 0.0.0.0/8. Was testing the wrong value, which was in host