@@ -348,6 +348,16 @@ uri.txt: uri=mailto:scam@uribl.com
 	path=(NULL)
 	query=(NULL)
 	fragment=(NULL)
+uri.txt: uri=mailto:abuse@snert.com
+	uriDecoded=abuse@snert.com
+	scheme=mailto
+	schemeInfo=abuse@snert.com
+	userInfo=abuse
+	host=snert.com
+	port=25
+	path=(NULL)
+	query=(NULL)
+	fragment=(NULL)
 uri.txt: uri=<wumpus@snert.org>
 	uriDecoded=wumpus@snert.org
 	scheme=mailto
